--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=zkoLciNDz6oAX_e7S7G&oh=01e43b870b5b0a23af6e00154d34fa3f&oe=5EA19934" alt="😁 Арманшыл Саят"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=17GHbUjbLaEAX8Ht0FQ&oh=0e8e7d9a194663cccf64922f4ef376df&oe=5EA58DB4" alt="😁 Арманшыл Саят"></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</a>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -93,7 +93,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>187</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=9t2IRN3ycTUAX9g4Kpr&oh=34177ff787b193c36967eb7983fc2d94&oe=5EA29AF2" alt="😏 Өз өміріңді қиындатпа!">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=CrV3-uSEwe0AX-ELdUF&oh=e283b2361702d8d15101670cc23bf1cd&oe=5EA68F72" alt="😏 Өз өміріңді қиындатпа!">
 							</div>
 							<div class="article-more__item-name">😏 Өз өміріңді қиындатпа!</div>
 						</a>
@@ -102,7 +102,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>183</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=7AfBXT7ND5QAX8p5URU&oh=018fcf3350d9eeb251a490245086fc13&oe=5EA3388F" alt="💰 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=7AfBXT7ND5QAX-ksaQ1&oh=bc5aac325b1bbaa5e1b8779b8069bd15&oe=5EA3388F" alt="💰 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">💰 Жарнама жібермей 🍋 тап!</div>
 						</a>
@@ -111,25 +111,16 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>163</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=dlZ5fJOUa6wAX9rAaJM&oh=93be1bdee1278a3474972049cb273fc1&oe=5EA2298A" alt="😊 «2020» жылы жеткен жетістіктерім">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=dlZ5fJOUa6wAX8X3lMc&oh=b8b1d588ecb1e6c20851f9509c7ac1be&oe=5EA61E0A" alt="😊 «2020» жылы жеткен жетістіктерім">
 							</div>
 							<div class="article-more__item-name">😊 «2020» жылы жеткен жетістіктерім</div>
-						</a>
-							<a href="./posts/./arman---maқsat---іs--әreket--.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>159</span>
-								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=pc-ecmiIR2cAX_gcKci&oh=64be82e0c92928170774c9e99b0bbdc1&oe=5EA35DA9" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
-							</div>
-							<div class="article-more__item-name">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
 						</a>
 							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>148</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=KOnWr9MQRtMAX9CaSK9&oh=61faaf7d2111cf88c959e1a41e53851e&oe=5EA22D42" alt="😮 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=KOnWr9MQRtMAX9_jvDc&oh=9045f7936ef0b19d580d1e53fb1fb9c6&oe=5EA621C2" alt="😮 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">😮 Жарнама жібермей 🍋 тап!</div>
 						</a>
@@ -138,7 +129,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>148</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=2dRFnFwSFvcAX-eIB6v&oh=5b37e0a4ac00d42db32ac9fb5204b770&oe=5EA2B4FF" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=2dRFnFwSFvcAX9LtTum&oh=c21f9e7f5535573b13cdacdfae1ba1ff&oe=5EA6A97F" alt="🤑 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">🤑 Жарнама жібермей 🍋 тап!</div>
 						</a>
@@ -147,7 +138,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>145</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=VUGdPsS0NRIAX8li6wF&oh=01969814614c0b76ffe848e73f1cc99c&oe=5EA436E1" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=FYaOlhaTSE0AX9JDC24&oh=1838b9c0f57973b8c5102bd60130fe04&oe=5EA436E1" alt="👋 Қайырлы күн Қалайық, Мұнда">
 							</div>
 							<div class="article-more__item-name">👋 Қайырлы күн Қалайық, Мұнда</div>
 						</a>
@@ -156,9 +147,18 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>116</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=pb1jf8cRB6QAX87hF5s&oh=df7104273e6700cafb5af4f9bab97e51&oe=5EA15296" alt="🧐Мен өмірге не үшін келдім?">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ofI4OItIlVQAX9kid80&oh=9072ee9355764bbb17c0c73e37a7932a&oe=5EA54716" alt="🧐Мен өмірге не үшін келдім?">
 							</div>
 							<div class="article-more__item-name">🧐Мен өмірге не үшін келдім?</div>
+						</a>
+							<a href="./posts/./xx-әtteң-osy-sұraқty-16mln.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>110</span>
+								</div>
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=hQVCEFt24lUAX-6mQGg&oh=6bbbfe3a1a687e30545c64b47055f2bd&oe=5EA497DB" alt="😬 Әттең осы сұрақты 16млн">
+							</div>
+							<div class="article-more__item-name">😬 Әттең осы сұрақты 16млн</div>
 						</a>
 						</div>
 				</div>
